# eCP

./: .gitignore  CMakeList.txt  README.md  pyproject.toml  setup.py
src/: CMakeList.txt
src/eCP/: CLIPDescriptor.hpp  Cluster.cpp  Cluster.h  IDataLoader.hpp  I_DataLoader.hpp  I_Descriptor.h  I_DistanceFunction.h  Neighborhood.cpp  Neighborhood.h  PyInterface.h  QueryOptimizationPolicies.cpp  QueryOptimizationPolicies.h  Tree.cpp  Tree.h
src/eCP/containers/: IContainer.h  IPFloatVecContainer.hpp  L2FloatVecContainer.hpp
src/eCP/descriptors/: FloatDescriptor.hpp  FloatVecDescriptor.hpp  IDescriptor.cpp  IDescriptor.h  SiftDescriptor.hpp  SiftDistance.h
tests/: loader_test.cpp
